package edu.fiuba.algo3.modelo.geometria;

public interface Direccion {

    Coordenada hallarCoordenadaSiguiente(Coordenada posicionActual);

}
