@startuml



package modelo {
class AlgoStar
class Mapa

package edificios {

}

package geometria {
package direcciones{
class Abajo
class Arriba
class Derecha
class Izquierda
}
interface Direccion
class Coordenada
class SuperficieRectangular
Coordenada .> Direccion
Direccion <|.. direcciones
SuperficieRectangular -up-> Coordenada
}
package jugadores {
'class Inventario
'abstract Jugador
'class JugadorZerg
'class JugadorProtoss

'Jugador -> Inventario
'Jugador <|--JugadorProtoss
'Jugador <|-left JugadorZerg
'Inventario .up> recursos

}
package recursos {

}
package terrenos {
interface EstadoTerreno
abstract Terreno
Terreno <|- TerrenoAereo
Terreno <|-left- TerrenoMineral
Terreno <|-- TerrenoVolcan
Terreno <|--- TerrenoBase
EstadoTerreno <- TerrenoBase
EstadoTerreno <|-. TerrenoVacio
EstadoTerreno <|.. TerrenoEnergizado
EstadoTerreno <|-. TerrenoMoho

}

package unidades {
}
package estadisticas {
class Nombre
class Danio
class Escudo
class Vida

}


}
AlgoStar --> jugadores
jugadores -------right--> edificios
jugadores ---> unidades
jugadores ...> Mapa
Mapa    -down-> terrenos
Mapa    -down-> geometria
terrenos  --> geometria
jugadores -right--> Nombre
jugadores -----> recursos

'edificios -->estadisticas
'unidades -down-> estadisticas

'Inventario -> recursos
'edificios <-right- Inventario
'Inventario -down-> unidades

'class Inventario


@enduml
